--- a/src/pages/ScannerPage.css
+++ b/src/pages/ScannerPage.css
@@ -182,6 +182,8 @@
   width: 100%;
   min-width: 0;
   min-height: 44px;
+  display: inline-flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -197,6 +199,8 @@
   width: 100%;
   min-width: 0;
   min-height: 44px;
+  display: inline-flex;
+  align-items: center;
   justify-content: center;
 }
 
